k8-with-loadbalancer_wtih_service_account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello-world
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world
    spec:
      serviceAccount: readonly-sa
      containers:
        - image: gcr.io/my-test-prj-01/hello-world-springboot-gcp:v4
          name: hello-world
          resources: {}
          ports:
            - containerPort: 8080
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: LoadBalancer
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 8080
