k8-with-ingress-and-nodeport-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello-world
  name: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world
    spec:
      serviceAccount: readonly-sa
      containers:
        - image: gcr.io/my-test-prj-01/hello-world-springboot-gcp:v3
          name: hello-world
          resources: {}
          ports:
            - containerPort: 8080
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
    - port: 8000 #My wish
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  defaultBackend:
    service:
      name: hello-service
      port:
        number: 8000
