k8-with-ingress-with-domain-and-certificate-and-iap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  strategy: {}
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      serviceAccount: readonly-sa
      containers:
        - image: gcr.io/my-test-prj-01/hello-world-springboot-gcp:v4
          name: hello-world
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 20
            timeoutSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 12
            timeoutSeconds: 9
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-world
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-ingress
  annotations:
    # create helloworld-ingress-ip first by using the command: gcloud compute addresses create helloworld-ingress-ip --global
    kubernetes.io/ingress.global-static-ip-name: "helloworld-ingress-ip"
    networking.gke.io/managed-certificates: "helloworld-certificate"
spec:
  defaultBackend:
    service:
      name: hello-service
      port:
        number: 80
