k8-with-ingress-with-static-ip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  strategy: {}
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      serviceAccount: readonly-sa
      containers:
        - image: gcr.io/my-test-prj-01/hello-world-springboot-gcp:v4
          name: hello-world
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 20
            timeoutSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 12
            timeoutSeconds: 9
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-world
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "helloworld-ingress-ip"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: hello-service
                port:
                  number: 80
